; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/rtp/extr_srtp.c_srtp_setkeystring.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/rtp/extr_srtp.c_srtp_setkeystring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @srtp_setkeystring(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca [16 x i32], align 16
  %9 = alloca [14 x i32], align 16
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = getelementptr inbounds [16 x i32], [16 x i32]* %8, i64 0, i64 0
  %14 = call i32 @hexstring(i8* %12, i32* %13, i32 64)
  store i32 %14, i32* %10, align 4
  %15 = load i8*, i8** %7, align 8
  %16 = getelementptr inbounds [14 x i32], [14 x i32]* %9, i64 0, i64 0
  %17 = call i32 @hexstring(i8* %15, i32* %16, i32 56)
  store i32 %17, i32* %11, align 4
  %18 = load i32, i32* %10, align 4
  %19 = icmp eq i32 %18, -1
  br i1 %19, label %23, label %20

20:                                               ; preds = %3
  %21 = load i32, i32* %11, align 4
  %22 = icmp eq i32 %21, -1
  br i1 %22, label %23, label %25

23:                                               ; preds = %20, %3
  %24 = load i32, i32* @EINVAL, align 4
  store i32 %24, i32* %4, align 4
  br label %38

25:                                               ; preds = %20
  %26 = load i32*, i32** %5, align 8
  %27 = getelementptr inbounds [16 x i32], [16 x i32]* %8, i64 0, i64 0
  %28 = load i32, i32* %10, align 4
  %29 = getelementptr inbounds [14 x i32], [14 x i32]* %9, i64 0, i64 0
  %30 = load i32, i32* %11, align 4
  %31 = call i64 @srtp_setkey(i32* %26, i32* %27, i32 %28, i32* %29, i32 %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %25
  %34 = load i32, i32* @EINVAL, align 4
  br label %36

35:                                               ; preds = %25
  br label %36

36:                                               ; preds = %35, %33
  %37 = phi i32 [ %34, %33 ], [ 0, %35 ]
  store i32 %37, i32* %4, align 4
  br label %38

38:                                               ; preds = %36, %23
  %39 = load i32, i32* %4, align 4
  ret i32 %39
}

declare dso_local i32 @hexstring(i8*, i32*, i32) #1

declare dso_local i64 @srtp_setkey(i32*, i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
